
	* D2X.make, arch/include/gui.h, arch/carbon/gui.c, arch/carbon/conf.h,
	arch/carbon/findfile.c,	arch/carbon/SDL_main.c, arch/carbon/descent.r:
	new files for supporting compilation with MPW for carbon (Mac OS 9)

	* include/strutil.h, misc/strutil.c: add str(n)icmp for carbon

	* main/playsave.c: do not seek while writing, carbon does not like it

2004-06-26  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamemine.c, main/gamemine.h, main/gamesave.c: remove some
	unnecessary globals

2004-06-01  Bradley Bell  <btb@icculus.org>

	* libmve/mve_main.c: cast malloc function pointer

	* MVEPlayer-Info.plist, d2x.xcode/project.pbxproj: added MVEPlayer
	target to XCode project

2004-05-31  Bradley Bell  <btb@icculus.org>

	* include/pstypes.h: fix accidental solaris breakage

	* main/object.c: fix crash caused by death-cam code

	* d2x-Info.plist, d2xgl-Info.plist, d2x.xcode/project.pbxproj:
	XCode project simplifications, network enabled

	* 2d/pixel.c, arch/ogl/ogl.c, include/pstypes.h,
	include/strutil.h, libmve/mveplay.c: XCode compilability fixes

	* Info.plist.in, Makefile.am, configure.ac: remove old OSX bundle
	stuff

	* English.lproj/InfoPlist.strings, d2x-Info.plist,
	d2xgl-Info.plist, arch/cocoa/SDLMain.h, arch/cocoa/SDLMain.m,
	d2x.xcode/project.pbxproj: added XCode project files

2004-05-22  Bradley Bell  <btb@icculus.org>

	* configure.ac, arch/ogl/ogl.c, misc/Makefile.am: make libpng
	optional

	* rpm/d2x.spec.in: Changed descriptions

2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c: fix compile when GL_NV_register_combiners isn't
	defined (d1x r1.40)

	* arch/win32/digi.c: fix strict-aliasing errors (d1x r1.13)

	* arch/win32/digi.c, arch/win32/key.c: Fix mismatched arg types in
	the win32 code (d1x r1.8, key_arch.c r1.2)

	* arch/ogl/sdlgl.c, arch/ogl/wgl.c, main/inferno.c: made opengl
	use 32bpp screen mode by default, add option to use 16bpp (d1x
	r1.4, r1.16, r1.34)
